# rational

./: CMakeLists.txt  main.cpp  rational.cpp  rational.h  rational_test.cpp  readme.md
